--- a/Four Card Feature Section/four-card-feature-section-master/index.html
+++ b/Four Card Feature Section/four-card-feature-section-master/index.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href=".\main.css" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+    <title>Frontend Mentor | Four card feature section</title>
+  </head>
+  <body>
+    <h2>Reliable, efficient delivery</h2>
+    <h1>Powered by Technology</h1>
+    <p>
+      Our Artificial Intelligence powered tools use millions of project data points to ensure that
+      your project is successful
     </p>
-  </footer>
-</body>
+    <div class="card">
+      <h2 class="card-header">Supervisor</h2>
+      <p>Monitors activity to identify project roadblocks</p>
+      <img src=".\images\icon-supervisor.svg" alt="eyeglass" />
+    </div>
+    <div class="card">
+      <h2 class="card-header">Team Builder</h2>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src=".\images\icon-team-builder.svg" alt="team building icon" />
+    </div>
+    <div class="card">
+      <h2 class="card-header">Karma</h2>
+      <p>Regularly evaluates our talent to ensure qualitys</p>
+      <img src=".\images\icon-karma.svg" alt="eyeglass" />
+    </div>
+    <div class="card">
+      <h2 class="card-header">Calculator</h2>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src=".\images\icon-calculator.svg" alt="eyeglass" />
+    </div>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/kevin-kretz">Kevin Kretz</a>.
+      </p>
+    </footer>
+  </body>
 </html>
