--- a/Four Card Feature Section/four-card-feature-section-master/index.html
+++ b/Four Card Feature Section/four-card-feature-section-master/index.html
@@ -5,42 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="stylesheet" href=".\main.css" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet" />
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
-    <h2>Reliable, efficient delivery</h2>
-    <h1>Powered by Technology</h1>
-    <p>
-      Our Artificial Intelligence powered tools use millions of project data points to ensure that
-      your project is successful
-    </p>
-    <div class="card">
-      <h2 class="card-header">Supervisor</h2>
-      <p>Monitors activity to identify project roadblocks</p>
-      <img src=".\images\icon-supervisor.svg" alt="eyeglass" />
+    <div id="container">
+      <div id="header">
+        <h2>Reliable, efficient delivery</h2>
+        <h1>Powered by Technology</h1>
+        <p class="intro">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+      </div>
+      <div id="supervisor" class="card">
+        <h2 class="card-header">Supervisor</h2>
+        <p>Monitors activity to identify project roadblocks</p>
+        <img src=".\images\icon-supervisor.svg" alt="eyeglass icon" />
+      </div>
+      <div id="team-builder" class="card">
+        <h2 class="card-header">Team Builder</h2>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <img src=".\images\icon-team-builder.svg" alt="team building icon" />
+      </div>
+      <div id="Karma" class="card">
+        <h2 class="card-header">Karma</h2>
+        <p>Regularly evaluates our talent to ensure qualitys</p>
+        <img src=".\images\icon-karma.svg" alt="karma icon" />
+      </div>
+      <div id-"Calculator" class="card">
+        <h2 class="card-header">Calculator</h2>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src=".\images\icon-calculator.svg" alt="calculator icon" />
+      </div>
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/kevin-kretz">Kevin Kretz</a>.
+        </p>
+      </footer>
     </div>
-    <div class="card">
-      <h2 class="card-header">Team Builder</h2>
-      <p>Scans our talent network to create the optimal team for your project</p>
-      <img src=".\images\icon-team-builder.svg" alt="team building icon" />
-    </div>
-    <div class="card">
-      <h2 class="card-header">Karma</h2>
-      <p>Regularly evaluates our talent to ensure qualitys</p>
-      <img src=".\images\icon-karma.svg" alt="eyeglass" />
-    </div>
-    <div class="card">
-      <h2 class="card-header">Calculator</h2>
-      <p>Uses data from past projects to provide better delivery estimates</p>
-      <img src=".\images\icon-calculator.svg" alt="eyeglass" />
-    </div>
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/kevin-kretz">Kevin Kretz</a>.
-      </p>
-    </footer>
   </body>
 </html>
