--- a/Four Card Feature Section/four-card-feature-section-master/index.html
+++ b/Four Card Feature Section/four-card-feature-section-master/index.html
@@ -11,8 +11,8 @@
   <body>
     <div id="container">
       <div id="header">
-        <h2>Reliable, efficient delivery</h2>
-        <h1>Powered by Technology</h1>
+        <h1>Reliable, efficient delivery</h1>
+        <h2>Powered by Technology</h2>
         <p class="intro">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
       </div>
       <div id="supervisor" class="card">
@@ -30,7 +30,7 @@
         <p>Regularly evaluates our talent to ensure qualitys</p>
         <img src=".\images\icon-karma.svg" alt="karma icon" />
       </div>
-      <div id-"Calculator" class="card">
+      <div id="Calculator" class="card">
         <h2 class="card-header">Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src=".\images\icon-calculator.svg" alt="calculator icon" />
