corrected IDs to lower case

--- a/Four Card Feature Section/four-card-feature-section-master/index.html
+++ b/Four Card Feature Section/four-card-feature-section-master/index.html
@@ -25,12 +25,12 @@
         <p>Scans our talent network to create the optimal team for your project</p>
         <img src=".\images\icon-team-builder.svg" alt="team building icon" />
       </div>
-      <div id="Karma" class="card">
+      <div id="karma" class="card">
         <h2 class="card-header">Karma</h2>
         <p>Regularly evaluates our talent to ensure qualitys</p>
         <img src=".\images\icon-karma.svg" alt="karma icon" />
       </div>
-      <div id="Calculator" class="card">
+      <div id="calculator" class="card">
         <h2 class="card-header">Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src=".\images\icon-calculator.svg" alt="calculator icon" />
