--- a/Four Card Feature Section/four-card-feature-section-master/index.html
+++ b/Four Card Feature Section/four-card-feature-section-master/index.html
@@ -38,7 +38,7 @@
       <footer>
         <p class="attribution">
           Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/kevin-kretz">Kevin Kretz</a>.
+          <a href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK" target="_blank">Frontend Mentor</a>. <br />Coded by <a href="https://github.com/kevin-kretz">Kevin Kretz</a>.
         </p>
       </footer>
     </div>
