updated divs to headers / sections

--- a/Four Card Feature Section/four-card-feature-section-master/index.html
+++ b/Four Card Feature Section/four-card-feature-section-master/index.html
@@ -10,31 +10,31 @@
   </head>
   <body>
     <div id="container">
-      <div id="header">
+      <header id="header">
         <h1>Reliable, efficient delivery</h1>
         <h2>Powered by Technology</h2>
         <p class="intro">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
-      </div>
-      <div id="supervisor" class="card">
+      </header>
+      <section id="supervisor" class="card">
         <h2 class="card-header">Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
         <img src=".\images\icon-supervisor.svg" alt="eyeglass icon" />
-      </div>
-      <div id="team-builder" class="card">
+      </section>
+      <section id="team-builder" class="card">
         <h2 class="card-header">Team Builder</h2>
         <p>Scans our talent network to create the optimal team for your project</p>
         <img src=".\images\icon-team-builder.svg" alt="team building icon" />
-      </div>
-      <div id="karma" class="card">
+      </section>
+      <section id="karma" class="card">
         <h2 class="card-header">Karma</h2>
         <p>Regularly evaluates our talent to ensure qualitys</p>
         <img src=".\images\icon-karma.svg" alt="karma icon" />
-      </div>
-      <div id="calculator" class="card">
+      </section>
+      <section id="calculator" class="card">
         <h2 class="card-header">Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src=".\images\icon-calculator.svg" alt="calculator icon" />
-      </div>
+      </section>
       <footer>
         <p class="attribution">
           Challenge by
