Added break for desktop view

--- a/Four Card Feature Section/four-card-feature-section-master/index.html
+++ b/Four Card Feature Section/four-card-feature-section-master/index.html
@@ -13,7 +13,7 @@
       <header id="header">
         <h1>Reliable, efficient delivery</h1>
         <h2>Powered by Technology</h2>
-        <p class="intro">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+        <p class="intro">Our Artificial Intelligence powered tools use millions of project data <br class="br" />points to ensure that your project is successful</p>
       </header>
       <section id="supervisor" class="card">
         <h2 class="card-header">Supervisor</h2>
